// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list Should allow indented codeblock inside 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "To put a code block within a list item, the code block needs
to be indented *twice* -- 8 spaces or two tabs:",
    "type": "paragraph",
    "value": "To put a code block within a list item, the code block needs to be indented *twice* -- 8 spaces or two tabs:",
  },
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "*   A list item with a code block:

        <code goes here>",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "A list item with a code block:",
            "type": "paragraph",
            "value": "A list item with a code block:",
          },
          Object {
            "type": "new-line",
          },
          Object {
            "indent": 8,
            "language": null,
            "raw": "        <code goes here>",
            "type": "code-block",
            "value": "<code goes here>",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "*",
      "ordered": false,
    },
    "raw": "*   A list item with a code block:

        <code goes here>",
    "type": "list",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "level": 3,
    "raw": "### Code Blocks",
    "type": "heading",
    "value": "Code Blocks",
  },
]
`;

exports[`list less than 4 indent should not break the list 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "  - item **1**",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item **1**",
            "type": "paragraph",
            "value": "item **1**",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "  - item [link](link-url)",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item [link](link-url)",
            "type": "paragraph",
            "value": "item [link](link-url)",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- item 3 \`code item\`",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item 3 \`code item\`",
            "type": "paragraph",
            "value": "item 3 \`code item\`",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- item 4",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item 4",
            "type": "paragraph",
            "value": "item 4",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "  - item **1**
  - item [link](link-url)
- item 3 \`code item\`
- item 4",
    "type": "list",
  },
]
`;

exports[`list should allow lazy lexing 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "- [x] list *item* one
omg this is merged with the above line",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "list *item* one
omg this is merged with the above line",
            "type": "paragraph",
            "value": "list *item* one omg this is merged with the above line",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": true,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- [x] list *item* one
omg this is merged with the above line",
    "type": "list",
  },
]
`;

exports[`list should allow lazy unless there is two line separator 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "- one
            two
three

	   \`\`\`
	   here
	   four
	   \`\`\`",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "one
            two
three",
            "type": "paragraph",
            "value": "one two three",
          },
          Object {
            "type": "new-line",
          },
          Object {
            "indent": 4,
            "language": null,
            "raw": "	   \`\`\`
	   here
	   four
	   \`\`\`",
            "type": "code-block",
            "value": "here
four",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "two",
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- three",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "three",
            "type": "paragraph",
            "value": "three",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- one
            two
three

	   \`\`\`
	   here
	   four
	   \`\`\`
- two
- three",
    "type": "list",
  },
]
`;

exports[`list should tokenize a valid ordered list 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": "1",
        "raw": "1. item **1**",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item **1**",
            "type": "paragraph",
            "value": "item **1**",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": "1",
        "raw": "1. item [link](link-url)",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item [link](link-url)",
            "type": "paragraph",
            "value": "item [link](link-url)",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": "1",
        "raw": "1. item 3 \`code item\`",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item 3 \`code item\`",
            "type": "paragraph",
            "value": "item 3 \`code item\`",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": null,
      "ordered": true,
    },
    "raw": "1. item **1**
1. item [link](link-url)
1. item 3 \`code item\`",
    "type": "list",
  },
]
`;

exports[`list should tokenize a valid un-ordered list 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "- item **1**",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item **1**",
            "type": "paragraph",
            "value": "item **1**",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- item [link](link-url)",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item [link](link-url)",
            "type": "paragraph",
            "value": "item [link](link-url)",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- item 3 \`code item\`",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item 3 \`code item\`",
            "type": "paragraph",
            "value": "item 3 \`code item\`",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- item **1**
- item [link](link-url)
- item 3 \`code item\`",
    "type": "list",
  },
]
`;

exports[`list should tokenize an empty list item 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "- one",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "one",
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "-",
        "tokens": Array [],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "two",
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- one
-
- two",
    "type": "list",
  },
]
`;

exports[`list should tokenize an empty list item 2`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "-",
        "tokens": Array [],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- one",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "one",
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "two",
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "-
- one
- two",
    "type": "list",
  },
]
`;

exports[`list should tokenize an empty list item 3`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "- one",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "one",
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "two",
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "-",
        "tokens": Array [],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- one
- two
-",
    "type": "list",
  },
]
`;

exports[`list should tokenize list combination 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "- one",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "one",
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "two",
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- one
- two",
    "type": "list",
  },
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": "1",
        "raw": "1. one",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "one",
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": "2",
        "raw": "2. two",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "two",
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": null,
      "ordered": true,
    },
    "raw": "1. one
2. two",
    "type": "list",
  },
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "- [ ] c empty",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "c empty",
            "type": "paragraph",
            "value": "c empty",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- [x] c checked",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "c checked",
            "type": "paragraph",
            "value": "c checked",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": true,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- [ ] c empty
- [x] c checked",
    "type": "list",
  },
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": "1",
        "raw": "1. [ ] c empty",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "c empty",
            "type": "paragraph",
            "value": "c empty",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": "1",
        "raw": "1. [x] c checked",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "c checked",
            "type": "paragraph",
            "value": "c checked",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": true,
      "identifier": null,
      "ordered": true,
    },
    "raw": "1. [ ] c empty
1. [x] c checked",
    "type": "list",
  },
]
`;

exports[`list should tokenize the nested list 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "checked": null,
        "count": null,
        "raw": "- item **1**",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item **1**",
            "type": "paragraph",
            "value": "item **1**",
          },
        ],
        "type": "list-item",
      },
      Object {
        "checked": null,
        "count": null,
        "raw": "- item [link](link-url)
    - item 3 \`code item\`
        - item 4
    - item 5 ~~strike~~",
        "tokens": Array [
          Object {
            "indent": 0,
            "raw": "item [link](link-url)",
            "type": "paragraph",
            "value": "item [link](link-url)",
          },
          Object {
            "indent": 4,
            "items": Array [
              Object {
                "checked": null,
                "count": null,
                "raw": "    - item 3 \`code item\`
        - item 4",
                "tokens": Array [
                  Object {
                    "indent": 0,
                    "raw": "item 3 \`code item\`",
                    "type": "paragraph",
                    "value": "item 3 \`code item\`",
                  },
                  Object {
                    "indent": 8,
                    "items": Array [
                      Object {
                        "checked": null,
                        "count": null,
                        "raw": "        - item 4",
                        "tokens": Array [
                          Object {
                            "indent": 0,
                            "raw": "item 4",
                            "type": "paragraph",
                            "value": "item 4",
                          },
                        ],
                        "type": "list-item",
                      },
                    ],
                    "meta": Object {
                      "check": false,
                      "identifier": "-",
                      "ordered": false,
                    },
                    "raw": "        - item 4",
                    "type": "list",
                  },
                ],
                "type": "list-item",
              },
              Object {
                "checked": null,
                "count": null,
                "raw": "    - item 5 ~~strike~~",
                "tokens": Array [
                  Object {
                    "indent": 0,
                    "raw": "item 5 ~~strike~~",
                    "type": "paragraph",
                    "value": "item 5 ~~strike~~",
                  },
                ],
                "type": "list-item",
              },
            ],
            "meta": Object {
              "check": false,
              "identifier": "-",
              "ordered": false,
            },
            "raw": "    - item 3 \`code item\`
        - item 4
    - item 5 ~~strike~~",
            "type": "list",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": Object {
      "check": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- item **1**
- item [link](link-url)
    - item 3 \`code item\`
        - item 4
    - item 5 ~~strike~~",
    "type": "list",
  },
]
`;
